--- a/request_page.html
+++ b/request_page.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro:100,200,300,400,500,600,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monda&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/css/card.compiled.css">
+    <link rel="stylesheet" href="assets/css/cart.compiled.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/partials/footer.compiled.css">
+    <link rel="stylesheet" href="assets/css/partials/header.compiled.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -39,6 +44,62 @@
             </div>
             <div class="col-md-4"></div>
         </div>
+    </div>
+    <div class="container" style="padding-left: 2px;padding-right: 2px;margin-top: -42px;padding-top: 0px;border-style: solid;border-color: var(--bs-black);margin-bottom: 0px;padding-bottom: 0px;">
+        <div class="table-responsive text-bg-light" style="padding-bottom: 0px;margin-bottom: 0px;margin-top: 0px;">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Requestee First Name</th>
+                        <th>Requestee Last Name</th>
+                        <th>Request Date</th>
+                        <th>Summary</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Eleni</td>
+                        <td>Annie</td>
+                        <td>11/01/22</td>
+                        <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                        <td><button class="btn btn-primary" type="button" style="background: var(--bs-red);">Fulfill</button></td>
+                    </tr>
+                    <tr>
+                        <td>Suman</td>
+                        <td>Batish</td>
+                        <td>11/02/22</td>
+                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                        <td><button class="btn btn-secondary" type="button" style="background: var(--bs-red);opacity: 0.50;">Completed</button></td>
+                    </tr>
+                    <tr>
+                        <td>Eleni</td>
+                        <td>Annie</td>
+                        <td>11/03/22</td>
+                        <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                        <td><button class="btn btn-primary" type="button" style="background: var(--bs-red);">Fulfill</button></td>
+                    </tr>
+                    <tr>
+                        <td>Suman</td>
+                        <td>Batish</td>
+                        <td>11/04/22</td>
+                        <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                        <td><button class="btn btn-secondary" type="button" style="background: var(--bs-red);opacity: 0.50;">Completed</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <nav class="d-flex m-auto" style="width: 240px;">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true">«</span></a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true">»</span></a></li>
+            </ul>
+        </nav>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
