--- a/request_page_user.html
+++ b/request_page_user.html
@@ -40,7 +40,7 @@
         <div class="row my-5">
             <div class="col-md-4"></div>
             <div class="col-md-4 page-title">
-                <h1 class="text-center" style="/*align-self: center;*/">Request Records</h1>
+                <h1 class="text-center" style="/*align-self: center;*/">Request History</h1>
             </div>
             <div class="col-md-4"></div>
         </div>
@@ -63,28 +63,28 @@
                         <td>Annie</td>
                         <td>11/01/22</td>
                         <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                        <td><button class="btn btn-primary" type="button" style="background: var(--bs-red);">Fulfill</button></td>
+                        <td>Complete</td>
                     </tr>
                     <tr>
                         <td>Suman</td>
                         <td>Batish</td>
                         <td>11/02/22</td>
                         <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                        <td><button class="btn btn-secondary" type="button" style="background: var(--bs-red);opacity: 0.50;">Completed</button></td>
+                        <td>In Progress</td>
                     </tr>
                     <tr>
                         <td>Eleni</td>
                         <td>Annie</td>
                         <td>11/03/22</td>
                         <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                        <td><button class="btn btn-primary" type="button" style="background: var(--bs-red);">Fulfill</button></td>
+                        <td>In Progress</td>
                     </tr>
                     <tr>
                         <td>Suman</td>
                         <td>Batish</td>
                         <td>11/04/22</td>
                         <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                        <td><button class="btn btn-secondary" type="button" style="background: var(--bs-red);opacity: 0.50;">Completed</button></td>
+                        <td>Complete</td>
                     </tr>
                 </tbody>
             </table>
