--- a/request_form.html
+++ b/request_form.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/card.compiled.css">
     <link rel="stylesheet" href="assets/css/cart.compiled.css">
+    <link rel="stylesheet" href="assets/css/Icon-Centered-Between-Lines.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/partials/footer.compiled.css">
     <link rel="stylesheet" href="assets/css/partials/header.compiled.css">
@@ -47,28 +48,19 @@
     </div>
     <div class="container" style="padding: 100px;padding-top: 10px;padding-bottom: 10px;border-width: 0px;border-color: var(--bs-black);">
         <div class="row">
-            <div class="col-md-12 col-lg-6">
-                <p style="font-size: 18px;">First Name</p><input type="text" style="width: 339.667px;" placeholder="Rose">
-            </div>
-            <div class="col">
-                <p style="font-size: 18px;">Last Name</p><input type="text" style="width: 339.667px;" placeholder="McGinnis">
+            <div class="col-md-4 col-lg-12 col-xl-12">
+                <p style="font-size: 18px;">*Date Slide Required By</p><input type="date" style="width: 100%;">
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-lg-6">
-                <p style="font-size: 18px;">Email</p><input type="text" style="width: 339.667px;" placeholder="Rose.Mcginnis@temple.edu">
-            </div>
-            <div class="col-md-4 col-lg-6">
-                <p style="font-size: 18px;">*Date Slide Required By</p><input type="date" style="width: 339.333px;">
-            </div>
             <div class="col-md-4 col-lg-12">
-                <p style="font-size: 18px;">Summary</p><input type="text" style="width: 731.667px;height: 114px;" placeholder="Plankton-Zooplankton wm Mount: Cross Quantity: 10">
+                <p style="font-size: 18px;">Summary</p><input type="text" placeholder="Plankton-Zooplankton wm Mount: Cross Quantity: 10" style="width: 100%;height: auto;">
             </div>
             <div class="col">
-                <p style="font-size: 18px;">Comments:</p><input type="text" style="width: 731.667px;height: 114px;" placeholder="Write any additional information you want to include here.">
+                <p style="font-size: 18px;">Comments:</p><input type="text" placeholder="Write any additional information you want to include here." style="width: 100%;">
             </div>
         </div>
-        <div class="btn-group" role="group" style="margin: 20px;margin-right: 20px;margin-left: 575px;"><button class="btn btn-primary" type="button" style="background: var(--bs-black);">Cancel</button><button class="btn btn-primary" type="button" style="background: var(--bs-red);">Upload</button></div>
+        <div class="btn-group" role="group" style="margin: 20px;margin-right: 20px;margin-left: 575px;"><button class="btn btn-primary" type="button" style="background: var(--bs-black);margin-right: 10px;">Cancel</button><button class="btn btn-primary" type="button" style="background: var(--bs-red);">Request</button></div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
