--- a/subcategory_page.html
+++ b/subcategory_page.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro:100,200,300,400,500,600,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monda&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/css/card.compiled.css">
+    <link rel="stylesheet" href="assets/css/cart.compiled.css">
+    <link rel="stylesheet" href="assets/css/divider-text-middle.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/partials/footer.compiled.css">
+    <link rel="stylesheet" href="assets/css/partials/header.compiled.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -20,7 +26,7 @@
                     </svg></span><span>BioCat</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-2"><span class="navbar-text">Hello User!</span>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="category_page.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Request</a></li>
                     <li class="nav-item"></li>
                 </ul>
@@ -34,10 +40,75 @@
     <div class="container">
         <div class="row my-5">
             <div class="col-md-4"></div>
-            <div class="col-md-4 page-title">
-                <h1 class="text-center" style="/*align-self: center;*/">Subcategories</h1>
+            <div class="col-md-4 page-title" style="margin-left: -190px;">
+                <h1 class="text-center" style="/*align-self: center;*/">Invertebrates</h1>
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div class="btn-group" role="group" style="margin-top: 18px;margin-left: 43px;background: var(--bs-black);"><button class="btn btn-primary" type="button" style="background: var(--bs-white);border-width: 0px;border-style: double;"><i class="fas fa-arrow-left" style="background: #ffffff;color: black;"></i></button><button class="btn btn-primary" type="button" style="background: rgb(255,255,255);border-width: 0px;border-style: double;"><i class="fas fa-arrow-right" style="background: #ffffff;color: black;"></i></button></div>
+            </div>
+        </div>
+    </div>
+    <div class="container mb-5">
+        <div class="row">
+            <div class="col-md-6 col-xl-8 col-xxl-8 card-side">
+                <div class="card my-card" style="/*border-radius: 10px;*/background: #52d1ff;width: 225px;height: 225px;">
+                    <a class="text-center mb-0" style= "color:black; text-decoration: none; font-size: 24px" href="annelida.html">Annelida</a>
+                </div>
+                <div class="card my-card" style="/*border-radius: 10px;*/background: #52d1ff;width: 225px;height: 225px;">
+                    <h4 class="text-center mb-0">Arthropoda</h4>
+                </div>
+                <div class="card my-card" style="/*border-radius: 10px;*/background: #52d1ff;width: 225px;height: 225px;">
+                    <h4 class="text-center mb-0">Bryozoa</h4>
+                </div>
+                <div class="card my-card" style="/*border-radius: 10px;*/background: #52d1ff;width: 225px;height: 225px;">
+                    <h4 class="text-center mb-0">Chordata(non-vertebrate)</h4>
+                </div>
+                <div class="card my-card" style="/*border-radius: 10px;*/background: #52d1ff;width: 225px;height: 225px;">
+                    <h4 class="text-center mb-0">Cnidaria</h4>
+                </div>
+                <div class="card my-card" style="/*border-radius: 10px;*/background: #52d1ff;width: 225px;height: 225px;">
+                    <h4 class="text-center mb-0">Echinodermata</h4>
+                </div>
+                <nav style="--bs-body-font-size: 1rem;">
+                    <ul class="pagination">
+                        <li class="page-item" style="background: var(--bs-border-color-translucent);border-color: rgb(33,37,41);border-top-color: var(--bs-blue);border-right-color: var(--bs-pink);border-bottom-color: var(--bs-border-color-translucent);border-left-color: var(--bs-pink);"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true">«</span></a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="#">5</a></li>
+                        <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true">»</span></a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-md-6 col-xl-4 col-xxl-4 offset-xl-5 cart" style="margin-left: -3px;">
+                <div class="cart-header py-2 mt-2">
+                    <h2 class="text-center">My slides</h2>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p style="padding-right: 0px;margin-right: 4px;margin-bottom: 22px;">Fungus - Zygorhynchus moelleri zygotes</p>
+                        <p style="padding-bottom: 0px;padding-top: 0px;margin-top: -17px;">Mount Type: Cross&nbsp; &nbsp; &nbsp;Quantity: 10<button class="btn btn-primary btn-sm text-center d-table-row float-end align-items-end" type="button" style="background: rgb(33,37,41);">Delete</button></p>
+                    </div>
+                </div>
+                <div style="text-align: center;padding-bottom: 11px;margin-bottom: 24px;margin-top: 84px;margin-left: 0px;">
+                    <h2 class="divider-style" style="margin-bottom: -51px;padding-left: 0px;"></h2>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p>Plankton - Zooplankton wm</p>
+                        <p style="padding-bottom: 0px;margin-top: -16px;"><button class="btn btn-primary btn-sm text-center d-table-row float-end align-items-end" type="button" style="background: rgb(33,37,41);">Delete</button>Mount Type: Cross&nbsp; &nbsp; Quantity: 10</p>
+                    </div>
+                </div>
+                <h2 class="divider-style" style="margin-bottom: -51px;padding-left: 0px;padding-bottom: 0px;margin-top: 10px;"></h2>
+                <div class="row" style="padding-top: 0px;margin-top: 92px;"></div>
+                <div class="row" style="padding-top: 0px;margin-top: 92px;"></div>
+                <div class="row" style="margin-top: 92px;padding-bottom: 0px;margin-bottom: -1px;padding-top: 0px;">
+                    <div class="col" style="padding-bottom: 14px;">
+                        <div class="btn-group" role="group"></div><button class="btn btn-primary d-table-row float-end" type="button" style="background: #dc3545;">Request</button><button class="btn btn-primary d-table-row float-end" type="button" style="margin-left: 14px;margin-right: 9px;background: rgb(33,37,41);">Cancel</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
