request form update

--- a/annelida.html
+++ b/annelida.html
@@ -99,7 +99,7 @@
                 <div class="row" style="padding-top: 0px;margin-top: 225px;"></div>
                 <div class="row" style="margin-top: 92px;padding-bottom: 0px;margin-bottom: -1px;padding-top: 0px;">
                     <div class="col">
-                        <div class="btn-group" role="group"></div><button class="btn btn-primary d-table-row float-end" type="button" style="background: #dc3545;">Request</button><button class="btn btn-primary d-table-row float-end" type="button" style="margin-left: 14px;margin-right: 9px;background: rgb(33,37,41);">Cancel</button>
+                        <div class="btn-group" role="group"></div><a class="btn btn-primary d-table-row float-end" type="button" style="background: #dc3545;" href='request_form.html'>Request</a><button class="btn btn-primary d-table-row float-end" type="button" style="margin-left: 14px;margin-right: 9px;background: rgb(33,37,41);">Cancel</button>
                     </div>
                 </div>
             </div>
