--- a/request_form.html
+++ b/request_form.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="page-container">
-        <div id="page-wrap">
+        <div id="content-wrap">
             <nav class="navbar navbar-light navbar-expand-md py-3">
                 <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><i class="fas fa-laptop-medical"></i></span><span>BioCat</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-2"><span class="navbar-text">Hello User!</span>
@@ -35,7 +35,7 @@
                     <div class="col-md-4"></div>
                 </div>
             </div>
-            <div class="container my-container p-5">
+            <div class="container my-container p-5 my-5">
                 <form>
                     <div class="row">
                         <div class="col my-col">
@@ -72,7 +72,7 @@
                 </form>
             </div>
         </div>
-        <footer class="text-center" style="background-color: var(--bs-gray-900);"><div class="container-fluid my-footer py-4" style="position: absolute;bottom: 0;/*right: 0;*//*left: 0;*//*right: 50px;*/">
+        <footer class="text-center my-footer"><div class="container-fluid py-4" >
     <p class="mb-0">Copyright © 2022 BioCat</p>
     <p class="mb-0">Temple University</p>
 </div></footer>
