With Scott and Shubh changes compiled
BeepBoop

--- a/add_page.html
+++ b/add_page.html
@@ -14,14 +14,14 @@
 
 <body>
     <div id="page-container">
-        <div id="page-wrap">
+        <div id="content-wrap">
             <nav class="navbar navbar-light navbar-expand-md py-3">
                 <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><i class="fas fa-laptop-medical"></i></span><span>BioCat</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1"><span class="navbar-text">Hello, Rob!</span>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Validation Tables</a></li>
+                            <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
                             <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
                             <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
                         </ul><button class="btn btn-primary my-button" type="button">Logout</button>
@@ -35,6 +35,49 @@
                         <h1 class="text-center" style="/*align-self: center;*/">Add New Slide</h1>
                     </div>
                     <div class="col-md-4"></div>
+                </div>
+                <div id="addSlideDiv" style="border-style: none;"></div>
+            </div>
+            <div class="container my-container py-2">
+                <div class="row">
+                    <div class="col-md-12 col-xl-6">
+                        <h4 class="slidesHeading"><span class="slidesHeading" style="color: var(--bs-red);">*</span>Slide Name</h4><input type="text" class="addSlideInputs" placeholder="Enter Slide Name Here" style="width: 100%;">
+                    </div>
+                    <div class="col-md-12 col-xl-6">
+                        <h4 class="slidesHeading"><span class="spanSlideHeadings">*</span>Unique Slide Identifier</h4><input type="text" class="addSlideInputs" placeholder="Enter Slide Name Here" style="width: 100%;">
+                    </div>
+                    <div class="col-md-12 col-xl-6">
+                        <h4 class="slidesHeading"><span class="spanSlideHeadings" style="color: var(--bs-red);">*</span>Category&nbsp;</h4>
+                        <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Select Category</button>
+                            <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-xl-6">
+                        <h4 class="slidesHeading"><span class="spanSlideHeadings">*</span>Subcategory</h4><div class="dropdown"><button class="btn btn-primary dropdown-toggle disabled my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button" disable="true">Select Subcategory</button>
+    <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+</div>
+                    </div>
+                    <div class="col-md-12 col-xl-6">
+                        <h4 class="slidesHeading"><span class="spanSlideHeadings" style="color: var(--bs-red);">*</span>Manufacturer</h4>
+                        <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Select Manafacturer</button>
+                            <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <h4 class="slidesHeading"><span class="spanSlideHeadings" style="color: var(--bs-red);">*</span>Mount Type</h4>
+                        <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Select Mount Type</button>
+                            <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-xl-6">
+                        <h4 class="slidesHeading"><span class="spanSlideHeadings" style="color: var(--bs-red);">*</span>Quantity</h4><input type="text" class="addSlideInputs" placeholder="">
+                    </div>
+                    <div class="col-xl-6">
+                        <h4 class="slidesHeading"><span class="spanSlideHeadings">*</span>Image</h4><input type="file" id="addSlideImg-1">
+                    </div>
+                    <div class="col">
+                        <div class="btn-group float-end mb-2 mx-3" role="group"><button class="btn btn-primary mx-2 close-button" type="button">Cancel</button><button class="btn btn-primary my-button" type="button">Add</button></div>
+                    </div>
                 </div>
             </div>
         </div>
