--- a/admin_page.html
+++ b/admin_page.html
@@ -21,7 +21,7 @@
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Validation Tables</a></li>
+                            <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
                             <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
                             <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
                         </ul><button class="btn btn-primary my-button" type="button">Logout</button>
@@ -44,7 +44,7 @@
                             <h4 class="text-center mb-0">Total Slides<br>50,234</h4>
                         </div>
                         <div class="card my-card" style="/*border-radius: 10px;*/">
-                            <h4 class="text-center mb-0">Requests<br></h4>
+                            <h4 class="text-center mb-0">Requests Completed<br>10/30</h4>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-12">
