--- a/annelida.html
+++ b/annelida.html
@@ -30,33 +30,33 @@
             <div class="col-md-6 col-xl-8 col-xxl-8">
                 <h1 class="text-center page-title" style="padding: 20px 60px;">Annelida</h1>
                 <div class=" card-side mt-4">
-                <div class="card" style="width: 215px;height: 215px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
+                <div class="card annedlida" id='' style="width: 215px;height: 215px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
                     <img class="card-img-top" src"..."="" alt="">
                     <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                         <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross Section&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Qty: 11</p>
                     </div>
                 </div>
-                <div class="card" style="width: 215px;height: 215px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
+                <div class="card annedlida" style="width: 215px;height: 215px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
                     <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                         <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross Section&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Qty: 11</p>
                     </div>
                 </div>
-                <div class="card" style="width: 215px;height: 215px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
+                <div class="card annedlida" style="width: 215px;height: 215px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
                     <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                         <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross Section&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Qty: 11</p>
                     </div>
                 </div>
-                <div class="card" style="width: 215px;height: 215px;margin-bottom: 0px;padding-top: 0px;margin-top: 0px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
+                <div class="card annedlida" style="width: 215px;height: 215px;margin-bottom: 0px;padding-top: 0px;margin-top: 0px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
                     <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                         <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross Section&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Qty: 11</p>
                     </div>
                 </div>
-                <div class="card" style="width: 215px;height: 215px;margin-top: 0px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
+                <div class="card annedlida" style="width: 215px;height: 215px;margin-top: 0px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
                     <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                         <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross Section&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Qty: 11</p>
                     </div>
                 </div>
-                <div class="card" style="width: 215px;height: 215px;margin-top: 0px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
+                <div class="card annedlida" style="width: 215px;height: 215px;margin-top: 0px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
                     <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                         <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross Section&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Qty: 11</p>
                     </div>
