--- a/request_page.html
+++ b/request_page.html
@@ -21,7 +21,7 @@
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Validation Tables</a></li>
+                            <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
                             <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
                             <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
                         </ul><button class="btn btn-primary" type="button">Logout</button>
@@ -62,7 +62,7 @@
                                 <td>Batish</td>
                                 <td>11/02/22</td>
                                 <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                                <td><button class="btn btn-secondary" type="button" style="background: var(--bs-red);opacity: 0.50;">Completed</button></td>
+                                <td><button class="btn btn-secondary" type="button">Completed</button></td>
                             </tr>
                             <tr>
                                 <td>Eleni</td>
@@ -76,7 +76,7 @@
                                 <td>Batish</td>
                                 <td>11/04/22</td>
                                 <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                                <td><button class="btn btn-secondary" type="button" style="background: var(--bs-red);opacity: 0.50;">Completed</button></td>
+                                <td><button class="btn btn-secondary" type="button">Completed</button></td>
                             </tr>
                         </tbody>
                     </table>
