--- a/import_page.html
+++ b/import_page.html
@@ -21,7 +21,7 @@
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Validation Tables</a></li>
+                            <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
                             <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
                             <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
                         </ul><button class="btn btn-primary my-button" type="button">Logout</button>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col">
-                            <div class="btn-group float-end mb-2 mx-3" role="group"><button class="btn btn-primary mx-2 close-button" type="button">Cancel</button><button class="btn btn-primary my-button" type="button">Request</button></div>
+                            <div class="btn-group float-end mb-2 mx-3" role="group"><button class="btn btn-primary mx-2 close-button" type="button">Cancel</button><button class="btn btn-primary my-button" type="button">Import</button></div>
                         </div>
                     </div>
                 </form>
