--- a/master_page.html
+++ b/master_page.html
@@ -19,7 +19,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Request</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Validation Tables</a></li>
+                    <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Add&nbsp;</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Import</a></li>
                 </ul><button class="btn btn-primary my-button" type="button">Logout</button>
