--- a/request_page_user.html
+++ b/request_page_user.html
@@ -106,7 +106,7 @@
                             </ul>
                             <hr style="margin-top: 8px;margin-bottom: 0px;">
                         </div>
-                        <div class="modal-footer"><button class="btn btn-primary" type="button" style="background: var(--bs-black);" data-dimiss="modal">Close</button></div>
+                        <div class="modal-footer"><button class="btn btn-primary close-button" type="button" data-bs-dismiss="modal">Close</button></div>
                     </div>
                 </div>
             </div>
