--- a/admin_page.html
+++ b/admin_page.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>BioCat</title>
+    <title>BioCat-Updated</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro:100,200,300,400,500,600,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monda&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/css/card.compiled.css">
+    <link rel="stylesheet" href="assets/css/cart.compiled.css">
+    <link rel="stylesheet" href="assets/css/components/dropdown.css">
+    <link rel="stylesheet" href="assets/css/Login-Form-Basic-icons.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/partials/footer.css">
+    <link rel="stylesheet" href="assets/css/partials/main-nav.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/table.css">
+    <link rel="stylesheet" href="assets/css/validation-tables.css">
 </head>
 
 <body style="position: relative;">
@@ -30,23 +39,23 @@
             </nav>
             <div class="container">
                 <div class="row my-5">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4 page-title">
-                        <h1 class="text-center" style="/*align-self: center;*/">Admin Dashboard</h1>
+                    <div class="col-md-4">
+                        <div class="card admin-card float-end" style="/*border-radius: 10px;*/">
+                            <h6 class="text-center mb-0">Total Slides<br>50,234</h6>
+                        </div>
                     </div>
-                    <div class="col-md-4"></div>
+                    <div class="col-md-4 page-title">
+                        <h2 class="text-center" style="/*align-self: center;*/">Admin Dashboard</h2>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card admin-card" style="/*border-radius: 10px;*/">
+                            <h6 class="text-center mb-0">Request Completed 10/30</h6>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="container my-5">
                 <div class="row">
-                    <div class="col-md-6 col-xl-12 card-side mb-5">
-                        <div class="card my-card" style="/*border-radius: 10px;*/">
-                            <h4 class="text-center mb-0">Total Slides<br>50,234</h4>
-                        </div>
-                        <div class="card my-card" style="/*border-radius: 10px;*/">
-                            <h4 class="text-center mb-0">Requests Completed<br>10/30</h4>
-                        </div>
-                    </div>
                     <div class="col-md-6 col-xl-12">
                         <div class="my-2 my-flex" style="gap: 30px;">
                             <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Category</button>
@@ -57,10 +66,10 @@
                             </div>
                             <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Mount Type</button>
                                 <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                            </div><button class="btn btn-primary my-button" type="button">Reset</button>
+                            </div><button class="btn btn-primary" type="button" style="background-color: var(--bs-green);">Search</button><button class="btn btn-primary my-button" type="button">Reset</button>
                         </div>
                         <div class="table-responsive">
-                            <table class="table">
+                            <table class="table custom-table">
                                 <thead>
                                     <tr>
                                         <th>Slide Name</th>
@@ -211,7 +220,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="my-flex mt-2">
+                        <div class="my-flex mt-5">
                             <nav>
                                 <ul class="pagination">
                                     <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true">«</span></a></li>
@@ -227,13 +236,15 @@
                 </div>
             </div>
         </div>
-        <footer class="text-center my-footer"><div class="container-fluid py-4">
+        <footer class="text-center" id="footer"><div class="container-fluid py-4">
     <p class="mb-0">Copyright © 2022 BioCat</p>
     <p class="mb-0">Temple University</p>
 </div></footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <script src="assets/js/request_completed.js"></script>
 </body>
 
 </html>
