--- a/import_page.html
+++ b/import_page.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>BioCat</title>
+    <title>BioCat-Updated</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro:100,200,300,400,500,600,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monda&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/css/card.compiled.css">
+    <link rel="stylesheet" href="assets/css/cart.compiled.css">
+    <link rel="stylesheet" href="assets/css/components/dropdown.css">
+    <link rel="stylesheet" href="assets/css/Login-Form-Basic-icons.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/partials/footer.css">
+    <link rel="stylesheet" href="assets/css/partials/main-nav.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/table.css">
+    <link rel="stylesheet" href="assets/css/validation-tables.css">
 </head>
 
 <body>
@@ -22,7 +31,7 @@
                             <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
                             <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
-                            <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
+                            <li class="nav-item"><a class="nav-link" href="add_page.html">Add Slides</a></li>
                             <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
                         </ul><button class="btn btn-primary my-button" type="button">Logout</button>
                     </div>
@@ -38,7 +47,7 @@
             <div class="container my-container" style="width: 70%;">
                 <form>
                     <div class="row">
-                        <div class="col-xl-12 col-xxl-12 offset-md-2 offset-xl-0" style="margin-right: 22px;padding-left: 0px;">
+                        <div class="col-xl-12 col-xxl-12 offset-md-2 offset-xl-0 my-2">
                             <p class="mx-2 mb-0">File Browser:</p><input class="form-control mx-1" type="file">
                         </div>
                         <div class="w-100"></div>
@@ -67,7 +76,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col">
-                            <div class="btn-group float-end mb-2 mx-3" role="group"><button class="btn btn-primary mx-2 close-button" type="button">Cancel</button><button class="btn btn-primary my-button" type="button">Import</button></div>
+                            <div class="btn-group float-end mb-2 mx-3" role="group"><button class="btn btn-primary mx-2 close-button" type="button" style="background-color: var(--bs-gray-900);">Cancel</button><button class="btn btn-primary my-button" type="button">Import</button></div>
                         </div>
                     </div>
                 </form>
@@ -80,6 +89,8 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <script src="assets/js/request_completed.js"></script>
 </body>
 
 </html>
