--- a/request_form.html
+++ b/request_form.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>BioCat</title>
+    <title>BioCat-Updated</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro:100,200,300,400,500,600,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monda&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/css/card.compiled.css">
+    <link rel="stylesheet" href="assets/css/cart.compiled.css">
+    <link rel="stylesheet" href="assets/css/components/dropdown.css">
+    <link rel="stylesheet" href="assets/css/Login-Form-Basic-icons.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/partials/footer.css">
+    <link rel="stylesheet" href="assets/css/partials/main-nav.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/table.css">
+    <link rel="stylesheet" href="assets/css/validation-tables.css">
 </head>
 
 <body>
@@ -17,10 +26,10 @@
         <div id="content-wrap">
             <nav class="navbar navbar-light navbar-expand-md py-3">
                 <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><i class="fas fa-laptop-medical"></i></span><span>BioCat</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navcol-2"><span class="navbar-text">Hello User!</span>
+                    <div class="collapse navbar-collapse" id="navcol-2"><span class="navbar-text">Hello Eleni!<br></span>
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link" href="#">Search</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Request</a></li>
+                            <li class="nav-item"><a class="nav-link" href="category_page.html">Search</a></li>
+                            <li class="nav-item"><a class="nav-link" href="request_page_user.html">Request History</a></li>
                             <li class="nav-item"></li>
                         </ul>
                     </div>
@@ -47,7 +56,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <p style="font-size: 18px;">*Date Slide Required By</p><input class="form-control" type="date" style="width: 100%;">
+                            <p style="font-size: 18px;">*Date Slide Required By</p><input class="form-control" type="date" style="width: 25%;">
                         </div>
                     </div>
                     <div class="row">
@@ -66,7 +75,7 @@
                     </div>
                     <div class="row mt-2">
                         <div class="col">
-                            <div class="btn-group float-end" role="group"><button class="btn btn-primary mx-1 close-button" type="button">Cancel</button><button class="btn btn-primary my-button" type="button">Request</button></div>
+                            <div class="btn-group float-end" role="group"><button class="btn btn-primary mx-1 close-button" type="button" style="background-color: var(--bs-gray-900);">Cancel</button><button class="btn btn-primary my-button" type="button">Request</button></div>
                         </div>
                     </div>
                 </form>
@@ -79,6 +88,8 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <script src="assets/js/request_completed.js"></script>
 </body>
 
 </html>
