--- a/request_page.html
+++ b/request_page.html
@@ -29,7 +29,7 @@
                     <div class="collapse navbar-collapse" id="navcol-1"><span class="navbar-text">Hello, Rob!</span>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
+                            <li class="nav-item"><a class="nav-link" href="request_page.html">Request History</a></li>
                             <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
                             <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
                             <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
@@ -41,7 +41,7 @@
                 <div class="row my-5">
                     <div class="col-md-4"></div>
                     <div class="col-md-4 page-title">
-                        <h1 class="text-center" style="/*align-self: center;*/">Request Records</h1>
+                        <h1 class="text-center" style="/*align-self: center;*/">Request History</h1>
                     </div>
                     <div class="col-md-4"></div>
                 </div>
